Padding on input div in relation to alignment with other divs fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ body {
 
 #input {
 	float: right;
+	padding: 0;
 }
 
 input {
